# mkdocs_demo

./: main.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: install.md  usage.md
docs/blog/posts/: draft.md  myfirst.md
docs/blog/posts/drafts/: draft2.md
docs/stylesheets/: extra.css
hooks/: socialmedia.py
site/: 404.html  index.html  sitemap.xml
site/blog/: index.html
site/blog/2023/12/31/happy-new-years-eve/: index.html
site/blog/2024/01/01/happy-new-year2/: index.html
site/blog/archive/2023/: index.html
site/blog/archive/2024/: index.html
site/blog/category/holidays/: index.html
site/blog/tags/: index.html
site/install/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/usage/: index.html
